--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ main{
     padding-top: 3rem;
     display: flex;
     align-items: center;
-    background: url(/assets/images/contabilidade-4.0.jpg);
+    background: url(../assets/images/contabilidade-4.0.jpg);
     background-size: cover;
     background-position:fixed ;
     background-color:#15102ce0;
