--- a/css/section-contato.css
+++ b/css/section-contato.css
@@ -1,68 +1,84 @@
-.section-contato{
-    display: flex;
-    padding: 2rem;
-    font-family: 'Jost';
-    align-items: center;
-    background-color: #e3e3e3;
+.section-contato {
+  display: flex;
+  padding: 2rem;
+  font-family: "Jost";
+  align-items: center;
+  background-color: #e3e3e3;
 }
 
-.section-contato > .container{
- display: flex;
- width: 100%;
- justify-content: space-around;
- align-items: center;
- background-color: var(--dark-blue);
- border-radius: 10px;
- padding: 2rem 0;
+.section-contato > .container {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--dark-blue);
+  border-radius: 10px;
+  padding: 2rem 0;
 }
 
-.section-contato .main-title{
-    font-size: 3rem;
+.section-contato .main-title {
+  font-size: 3rem;
 }
 
-.section-contato .container .right{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    min-width: 370px;
-    padding: 1rem;
-    background-color: var(--dark-blue);
-    border-radius:8px ;
-    color: aliceblue;
+.section-contato .container .right {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  min-width: 200px;
+  padding: 1rem;
+  background-color: var(--dark-blue);
+  border-radius: 8px;
+  color: aliceblue;
 }
 
-.section-contato form{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 360px;
+.section-contato form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 360px;
 }
 
-.section-contato form input{
-    height: 40px;
+.section-contato form input {
+  height: 40px;
 }
 
-.section-contato form textarea{
-    max-width: 360px;
-    max-height: 100px;
-    box-sizing: border-box;
+.section-contato form textarea {
+  max-width: 360px;
+  max-height: 100px;
+  box-sizing: border-box;
 }
 
-
-.section-contato .container  img{
-    height: 450px;
+.section-contato .container img {
+  height: 450px;
 }
 
-
-.container .main-button{
-    border-radius: 20px;
-    height: 40px;
-    transition: 500ms ease-in-out;
+.container .main-button {
+  border-radius: 20px;
+  height: 40px;
+  transition: 500ms ease-in-out;
 }
 
-    .container .main-button:hover{
-        border: 2px solid #e3e3e3;
-        color: var(--dourado);
-        background-color: #e3e3e300;
-        cursor: pointer;
+.container .main-button:hover {
+  border: 2px solid #e3e3e3;
+  color: var(--dourado);
+  background-color: #e3e3e300;
+  cursor: pointer;
+}
+
+@media (max-width: 999px) {
+    .section-contato .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
+
+    .container .right h3 {
+       font-size: 30px;
+       text-align: center;
+    }
+
+    .container img {
+        width: 250px;
+    }
+}
