--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ main {
     align-items: center;
     justify-content: center;
     padding-left: 30px;
-    background-size: 100vw 100vh;
+    background-size: cover;
     background-repeat: no-repeat;
   }
 
