--- a/css/style.css
+++ b/css/style.css
@@ -161,9 +161,9 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-left: 30px;
     background-size: cover;
     background-repeat: no-repeat;
+    padding: 150px 1rem 0rem 1rem;
   }
 
   .main-header img {
@@ -191,7 +191,8 @@ main {
   }
 
   .slogan .title {
-    font-size: 30px;
+    font-size: 2.5rem;
+    font-weight: 600;
   }
 
   .slogan .description {
